feat(new year special)
remove outdated code, add initial founding RR logic, add ticket system